feat: Add migration to set up list fields for council_type and council_nation

--- a/council_finance/templates/council_finance/contribute_new.html
+++ b/council_finance/templates/council_finance/contribute_new.html
@@ -623,7 +623,7 @@ class ContributeManager {
     document.getElementById('edit-value-select').classList.add('hidden');
     
     // Load field options for the modal dropdown
-    // this.loadFieldOptions(data.field);
+    this.loadFieldOptions(data.field);
     
     document.getElementById('edit-value').focus();
     
