--- a/council_finance/templates/council_finance/contribute_new.html
+++ b/council_finance/templates/council_finance/contribute_new.html
@@ -733,7 +733,7 @@ class ContributeManager {
           editValueSelect.focus();
         }
       } else if (resp.status === 400) {
-        // Field is not a list type, keep text input
+        // Field is not a list type, keep text input (this is expected behavior)
         console.log(`Field ${fieldSlug} is not a list type, using text input`);
       } else {
         console.error(`Failed to load field options for ${fieldSlug}: ${resp.status}`);
