feat: Remove unnecessary deleteCounter function as direct links with confirm are now used

--- a/council_finance/templates/council_finance/site_counter_list.html
+++ b/council_finance/templates/council_finance/site_counter_list.html
@@ -232,11 +232,28 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                 <div class="flex space-x-2">
                   <a href="{% url 'site_counter_edit' site_counter.slug %}" 
-                     class="text-blue-600 hover:text-blue-800">Edit</a>
-                  <a href="#" onclick="previewCounter('{{ site_counter.slug }}')" 
-                     class="text-green-600 hover:text-green-800">Preview</a>
-                  <a href="#" onclick="deleteCounter('{{ site_counter.slug }}')" 
-                     class="text-red-600 hover:text-red-800">Delete</a>
+                     class="inline-flex items-center px-2.5 py-1.5 border border-transparent text-xs font-medium rounded text-blue-700 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                    </svg>
+                    Edit
+                  </a>
+                  <a href="#" onclick="previewCounter('{{ site_counter.slug }}'); return false;" 
+                     class="inline-flex items-center px-2.5 py-1.5 border border-transparent text-xs font-medium rounded text-green-700 bg-green-100 hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                    </svg>
+                    Preview
+                  </a>
+                  <a href="{% url 'site_counter_delete' site_counter.slug %}" 
+                     onclick="return confirm('Are you sure you want to delete the site counter \'{{ site_counter.name }}\'? This action cannot be undone.');" 
+                     class="inline-flex items-center px-2.5 py-1.5 border border-transparent text-xs font-medium rounded text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+                    </svg>
+                    Delete
+                  </a>
                 </div>
               </td>
             </tr>
@@ -323,11 +340,6 @@ function previewCounter(slug) {
   alert('Preview functionality coming soon for: ' + slug);
 }
 
-function deleteCounter(slug) {
-  if (confirm('Are you sure you want to delete this site counter?')) {
-    // TODO: Implement delete functionality
-    alert('Delete functionality coming soon for: ' + slug);
-  }
-}
+// Note: The deleteCounter function is no longer needed as we're using direct links with confirm
 </script>
 {% endblock %}
